--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -34,3 +34,17 @@ input[type="password"]:focus{
     background: #1a2226;
     margin: 0;
 }
+.card-title{
+    font-weight: 900;
+    padding-top: 20px;
+}
+.btnlogin{
+    background: #0db8de !important;
+    font-size: 14px;
+    transform: translateY(10px);
+    border-radius: 10px !important;
+}
+.signup{
+    text-align: center;
+    padding-top: 25px;
+}
