--- a/src/Components/signup.css
+++ b/src/Components/signup.css
@@ -1,4 +1,3 @@
-
 .global-container{
     height: 100%;
     display: flex;
@@ -9,24 +8,25 @@
 form{
     padding-top: 10px;
     font-size: 14px;
-    margin-top: 30px;
+    margin-top: 10px;
 }
-.login-form{
-    width: 400px;
-    height: 460px;
+.login-form-signup{
+    width: 500px;
+    height: 580px;
     margin: 20px;
     background: #1a2226;
     border-radius: 10px;
 }
-input[type="email"],
-input[type="password"]{
+.signup-body{
+    padding: 0px 20px;
+}
+input[type="text"]{
     background: #1a2226;
     border-color: #0db8de;
     color: white;
     border-radius: 10px;
 }
-input[type="email"]:focus,
-input[type="password"]:focus{
+input[type="text"]:focus{
     color: white;
     outline: none;
     border: none;
@@ -35,7 +35,7 @@ input[type="password"]:focus{
 }
 .card-title{
     font-weight: 700;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 .btnlogin{
     background: #0db8de !important;
@@ -45,5 +45,5 @@ input[type="password"]:focus{
 }
 .signup{
     text-align: center;
-    padding-top: 25px;
+    padding-top: 20px;
 }
