--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -13,20 +13,19 @@ form{
 }
 .login-form{
     width: 400px;
-    height: 460px;
+    height: 430px;
     margin: 20px;
     background: #1a2226;
     border-radius: 10px;
+    box-shadow: 5px 10px 8px #0db8de;
 }
-input[type="email"],
-input[type="password"]{
+.input-login{
     background: #1a2226;
     border-color: #0db8de;
     color: white;
     border-radius: 10px;
 }
-input[type="email"]:focus,
-input[type="password"]:focus{
+.input-login:focus{
     color: white;
     outline: none;
     border: none;
