--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -9,6 +9,7 @@
 form{
     padding-top: 10px;
     font-size: 14px;
+    font-family: "Roboto",sans-serif;
     margin-top: 30px;
 }
 .login-form{
@@ -34,11 +35,13 @@ form{
 }
 .card-title{
     font-weight: 700;
+    font-family: "Roboto",sans-serif;
     padding-top: 20px;
 }
 .btnlogin{
     background: #0db8de !important;
     font-size: 14px;
+    font-family: "Roboto",sans-serif;
     transform: translateY(10px);
     border-radius: 10px !important;
 }
