--- a/src/Components/signup.css
+++ b/src/Components/signup.css
@@ -8,6 +8,7 @@
 form{
     padding-top: 10px;
     font-size: 14px;
+    font-family: "Roboto",sans-serif;
     margin-top: 10px;
 }
 .login-form-signup{
@@ -23,11 +24,13 @@ form{
 }
 .card-title{
     font-weight: 700;
+    font-family: "Roboto",sans-serif;
     padding-top: 10px;
 }
 .btnlogin{
     background: #0db8de !important;
     font-size: 14px;
+    font-family: "Roboto",sans-serif;
     transform: translateY(10px);
     border-radius: 10px !important;
 }
