--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
-  background: url("../assets/bg1.webp");
+  background: url("../assets/bg2.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
